trunk/Archive2/2b/4faa1ee0ca71d2/output
main.cpp: In instantiation of 'function<R, Args>& function<R, Args>::operator=(const function<R, Args>&) [with R = void; Args = {}]':
main.cpp:63:25:   required from here
main.cpp:44:58: error: 'const class std::unique_ptr<holder_base<void>, std::default_delete<holder_base<void> > >' has no member named 'clone'
     function& operator=(function const& other) { functor = other.functor.clone(); return *this; }
                                                          ^
1
